--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -34,15 +38,31 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  padding: 8px 25px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  padding: 0px;
+  margin: 16px;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
 }
 
 ul {
   list-style-type: none;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.left, .right{
+  display: flex;
+  align-items: center;
+  display: flex;
+  gap: 16px;
 }
