--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,6 +1,7 @@
 .para,
 .small-para {
   color: hsl(0, 100%, 50%);
+
 }
 
 .small-para {
@@ -16,15 +17,15 @@
   color: white;
   font-size: 20px;
   font-weight: bold;
-} 
+}
 
-.button {
+#cancel-button {
   background-color: #ffc0cb;
   color: black;
   font-size: 20px;
 }
 
-.child {
+div.text .child {
   color: red;
   font-size: 14px;
 }
