--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -4,24 +4,38 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 600px;
+  height: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 33px;
+  text-align: center;
+  padding: 39px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 42px 16px;
+  margin-bottom: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 39px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 15px 24px;
 }
