--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,7 +5,7 @@ body {
 .title {
   font-size: 36px;
   font-weight: 900;
-  padding: 0 0 32px 0;
+  margin-bottom: 32px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -13,16 +13,20 @@ body {
 }
 
 img {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
 }
 
-.container {
-  padding: 0;
-  margin: 0;
+.container{
   display: flex;
-  justify-content:space-around;
-  align-items: center;
+  justify-content: center;
+  gap: 52px;
+}
+
+.info {
+  max-width: 200px;
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
